--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -5,6 +5,12 @@
 	"Menu: Posts": "News",
 	"Menu: Articles": "Libraru",
 	"Menu: Contacts": "Contacts",
+	"Our clients": "Our clients",
+	"All Rights Reserved": "All Rights Reserved",
+	"Address": "Address",
+	"Email": "Email",
+	"Phone": "Phone",
+	"Fax": "Fax",
 
 
 
