--- a/resources/lang/tr.json
+++ b/resources/lang/tr.json
@@ -5,6 +5,13 @@
 	"Menu: Posts": "Haberler",
 	"Menu: Articles": "Bi̇lgi̇ Bankasi",
 	"Menu: Contacts": "İleti̇şi̇m",
+	"Our clients": "Müşterilerimiz",
+	"All Rights Reserved": "Tüm Hakları Saklıdır",
+	"Address": "Адрес",
+	"Email": "Email",
+	"Phone": "Тел",
+	"Fax": "Факс",
+
 
 
 	"Locale: Last": ""
