--- a/resources/lang/ru.json
+++ b/resources/lang/ru.json
@@ -5,6 +5,13 @@
 	"Menu: Posts": "Новости",
 	"Menu: Articles": "Статьи",
 	"Menu: Contacts": "Контакты",
+	"Our clients": "Наши клиенты",
+	"All Rights Reserved": "Все права зарегистрированы",
+	"Address": "Adres",
+	"Email": "e-Posta",
+	"Phone": "Telefon",
+	"Fax": "Fax",
+
 
 
 	"Locale: Last": ""
