--- a/resources/lang/ru.json
+++ b/resources/lang/ru.json
@@ -1,7 +1,7 @@
 {
     "Menu: About": "О компании",
 	"Menu: Services": "Услуги",
-	"Menu: Applications": "Приложения",
+	"Menu: Applications": "Технологии",
 	"Menu: Posts": "Новости",
 	"Menu: Articles": "Статьи",
 	"Menu: Contacts": "Контакты",
