--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -11,6 +11,8 @@
 	"Email": "Email",
 	"Phone": "Phone",
 	"Fax": "Fax",
+	"Social": "Social nets",
+	"View on google map": "View on google map",
 
 
 
