--- a/resources/lang/ru.json
+++ b/resources/lang/ru.json
@@ -7,10 +7,12 @@
 	"Menu: Contacts": "Контакты",
 	"Our clients": "Наши клиенты",
 	"All Rights Reserved": "Все права зарегистрированы",
-	"Address": "Adres",
-	"Email": "e-Posta",
-	"Phone": "Telefon",
-	"Fax": "Fax",
+	"Address": "Адрес",
+	"Email": "Email",
+	"Phone": "Телефон",
+	"Fax": "Факс",
+	"Social": "Социальные сети",
+	"View on google map": "Посмотреть на карте google",
 
 
 
