--- a/resources/lang/tr.json
+++ b/resources/lang/tr.json
@@ -7,10 +7,12 @@
 	"Menu: Contacts": "İleti̇şi̇m",
 	"Our clients": "Müşterilerimiz",
 	"All Rights Reserved": "Tüm Hakları Saklıdır",
-	"Address": "Адрес",
-	"Email": "Email",
-	"Phone": "Тел",
-	"Fax": "Факс",
+	"Address": "Adres",
+	"Email": "e-Posta",
+	"Phone": "Telefon",
+	"Fax": "Fax",
+	"Social": "Sosyal ağlar",
+	"View on google map": "Google haritasında görüntüle",
 
 
 
