--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -13,6 +13,7 @@
 	"Fax": "Fax",
 	"Social": "Social nets",
 	"View on google map": "View on google map",
+	"Waste Water Treatment and Reuse": "Water / Waste Water Treatment and Reuse",
 
 
 
