--- a/resources/lang/ru.json
+++ b/resources/lang/ru.json
@@ -13,6 +13,7 @@
 	"Fax": "Факс",
 	"Social": "Социальные сети",
 	"View on google map": "Посмотреть на карте google",
+	"Waste Water Treatment and Reuse": "Очистка, кондиционирование и восстановление в системах водоснабжения / канализации",
 
 
 
