--- a/resources/lang/tr.json
+++ b/resources/lang/tr.json
@@ -13,6 +13,7 @@
 	"Fax": "Fax",
 	"Social": "Sosyal ağlar",
 	"View on google map": "Google haritasında görüntüle",
+	"Waste Water Treatment and Reuse": "Su / Atık Su Sistemlerinde Arıtma, Şartlandırma ve Geri Kazanım",
 
 
 
